# cookiecutter-wagtail-package

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  ci.json  cookiecutter.json  justfile  package-lock.json  package.json  prettier.config.js  pyproject.toml  ruff.toml  stylelint.config.mjs  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.agents/skills/: package-guidelines-audit.md  update-package-from-template.md  upgrade-project-dependencies.md
.agents/skills/create-django-package/: SKILL.md
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: codeql-analysis.yml  nightly.yml  publish.yml  template.yml  test.yml  zizmor.yml
demo/: manage.py
demo/blog/: apps.py  blocks.py  models.py
demo/blog/management/commands/: load_initial_data.py
demo/blog/migrations/: 0001_initial.py  0002_alter_blogpage_body.py  0003_alter_blogpage_body.py
demo/blog/templates/blog/: blog_index_page.html  blog_page.html
demo/demo/: urls.py  wsgi.py
demo/demo/settings/: base.py  dev.py  production.py
demo/demo/static/css/: bootstrap.min.css
demo/demo/templates/: base.html
demo/demo/templates/base/include/: header-blog.html
demo/demo/templates/blocks/: captioned_image_block.html
demo/demo/templates/includes/: chevron-icon.html  footer.html  header.html  messages.html
demo/demo/templates/includes/card/: blog-listing-card.html  picture-card.html
demo/demo/templates/tags/: top_menu.html
demo/home/: models.py  tests.py
demo/home/migrations/: 0002_create_homepage.py  0003_homepage_body_homepage_featured_section_3_and_more.py  0004_alter_homepage_body.py  0005_alter_homepage_body.py
demo/home/static/css/: welcome_page.css
demo/home/templates/home/: home_page.html
demo/home/templatetags/: navigation_tags.py
demo/search/: views.py
docs/: CONTRIBUTING.md  README.md
hooks/: post_gen_project.py  pre_prompt.py
src/: CONTRIBUTING.md  LICENSE  README.md
src/my_project_name/: __init__.py  apps.py  wagtail_hooks.py
src/my_project_name/templates/my_project_name/admin/: my_project_name_summary.html
src/my_project_name/test/: apps.py  settings.py
template/: AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md
wagtail-{{ cookiecutter.project_name_kebab }}/: .coveragerc  .gitignore  .nvmrc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
wagtail-{{ cookiecutter.project_name_kebab }}/.circleci/: config.yml  trigger-nightly-build.sh
wagtail-{{ cookiecutter.project_name_kebab }}/.github/: publish.yml
wagtail-{{ cookiecutter.project_name_kebab }}/.github/workflows/: test.yml
wagtail-{{ cookiecutter.project_name_kebab }}/wagtail_{{ cookiecutter.project_name_snake }}/: __init__.py  apps.py  wagtail_hooks.py
wagtail-{{ cookiecutter.project_name_kebab }}/wagtail_{{ cookiecutter.project_name_snake }}/static/wagtail_{{ cookiecutter.project_name_snake }}/js/: .gitignore
wagtail-{{ cookiecutter.project_name_kebab }}/wagtail_{{ cookiecutter.project_name_snake }}/static_src/: custom.d.ts
wagtail-{{ cookiecutter.project_name_kebab }}/wagtail_{{ cookiecutter.project_name_snake }}/test/: __init__.py  apps.py  settings.py
{{ cookiecutter.__project_name_kebab }}/: .coveragerc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  package.json  pyproject.toml  requirements-ci.txt  ruff.toml  setup.cfg  testmanage.py  tox.ini
{{ cookiecutter.__project_name_kebab }}/.circleci/: config.yml  trigger-nightly-build.sh
{{ cookiecutter.__project_name_kebab }}/.github/scripts/: report_nightly_build_failure.py
{{ cookiecutter.__project_name_kebab }}/.github/workflows/: nightly.yml  publish.yml  test.yml
{{ cookiecutter.__project_name_kebab }}/{{ cookiecutter.__project_name_snake }}/: apps.py  wagtail_hooks.py
{{ cookiecutter.__project_name_kebab }}/{{ cookiecutter.__project_name_snake }}/static/{{ cookiecutter.__project_name_snake }}/js/: .gitignore
{{ cookiecutter.__project_name_kebab }}/{{ cookiecutter.__project_name_snake }}/static_src/: custom.d.ts
{{ cookiecutter.__project_name_kebab }}/{{ cookiecutter.__project_name_snake }}/test/: __init__.py  apps.py  settings.py
