[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[project]
name = "my-project-name"
version = "0.1.0"
description = "Placeholder: Project short description"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]
requires-python = ">=3.8"
dependencies = ["Django>=4.2", "Wagtail>=5.2"]
[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit==3.4.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-django==4.8.0",
]
ci = ["tox==4.11.3", "tox-gh-actions==3.1.3"]

[project.urls]
Home = "https://github.com/https://github.com/org-name-or-username/my-project-name"

[tool.uv.build-backend]
module-name = "my_project_name"
source-exclude = [
    "my_project_name/static_src",
    "my_project_name/test",
    "my_project_name/static/my_project_name/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "my_project_name.test.settings"
